2008-02-27 TADA Tadashi <sho@spc.gr.jp>
	* misc/style/etdiary: catch up current specification of the style.
	* skel/preview.rhtml*: supported label element for hide diary checkbox.

2008-02-24 TADA Tadashi <sho@spc.gr.jp>
	* plugin/05referer.rb: fixed no saving referer on day mode.

2008-02-23 TADA Tadashi <sho@spc.gr.jp>
	* plugin/05referer.rb: fixed #49.

2008-02-14 ds14050 <ds14050 at vvvvvv.sakura.ne.jp>
	* tdiary/wiki_style.rb: fixed eval error in valid_plugin_syntax?.

2008-02-13 TADA Tadashi <sho@spc.gr.jp>
	* misc/lib/hikidoc.rb: updated to trunk and fix about InterWikiName.

2008-02-10 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/wiki_style.rb: removed warning by HikiDoc#to_html.

2008-02-08 TADA Tadashi <sho@spc.gr.jp>
	* skel/diary.rhtml: hide div#comment-form-section without day mode.

2008-02-04 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary.rb,plugin/00default.rb,plugin/10spamfilter.rb,
	plugin/en/10spamfilter.rb,plugin/ja/10spamfilter.rb,
	plugin/zh/10spamfilter.rb,tdiary/filter/spam.rb:
	[EXPERIMENTAL] remove option for spamfilter.hide_comment.
	Javascript is used to display all TSUKKOMI from into setting days before.

2008-02-03 TADA Tadashi <sho@spc.gr.jp>
	* skel/diary.rhtml, plugin/00default.rb: [EXPERIMENTAL] add TSUKKOMI form
	by Javascript in the hidden comment form condition.

2008-01-19 TADA Tadashi <sho@spc.gr.jp>
	* misc/lib/hikidoc.rb: updated to 0.0.2.
	* tdiary/wiki_style.rb: added :use_wiki_name and
	:allow_bracket_inline_image option to false to HikiDoc. thanks to ds14050.

2008-01-15 TADA Tadashi <sho@spc.gr.jp>
	* plugin/05referer.rb: fixed #11: error on update with no referer.

2008-01-11 SHIBATA Hiroshi <h-sbt@nifty.com>
	* plugin/00default.rb, plugin/10spamfilter.rb,
	plugin/*/10spamfilter.rb: add option for hide comment-form before
	days considered to be spam.

2008-01-11 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: hide comment form when accessed by bot.

2008-01-08 TADA Tadashi <sho@spc.gr.jp>